Fix disabled buttons with color. Add z-index to toolbar

--- a/src/client/shared/components/Toolbar/styles.scss
+++ b/src/client/shared/components/Toolbar/styles.scss
@@ -15,6 +15,7 @@ $titlePadding: $base * 3 * 1px;
 
   background-color: $backgroundColor;
   color: $textLightPrimary;
+  z-index: 1;
 }
 
 .center {
